--- a/whisper-shh/project.config.json
+++ b/whisper-shh/project.config.json
@@ -30,7 +30,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": 6,
 			"list": [
 				{
 					"id": -1,
@@ -49,6 +49,34 @@
 					"id": -1,
 					"name": "post",
 					"pathName": "pages/post/post",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "report",
+					"pathName": "pages/reportpage/reportpage",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "about",
+					"pathName": "pages/about/about",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "report",
+					"pathName": "pages/reportpage/reportpage",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "myPost",
+					"pathName": "pages/myPosts/myPosts",
 					"scene": null
 				}
 			]
